# -PySpz

./: .coverage  .gitignore  README.md  example_usage.py  pyproject.toml
.github/workflows/: ci.yml
output/: tileset.json
output/tiles/: tile_000.json
pyspz/: __init__.py  _core.py  _dequantize.py  _header.py  _tileset.py
pyspz.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  test_core.py  test_dequantize.py  test_header.py  test_tileset.py  test_validation.py
