[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyspz"
version = "0.1.0"
description = "Python library for reading SPZ (3D Gaussian Splatting) files"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Oleg Evstifeev", email = "oleg@example.com"}
]
keywords = ["3d", "gaussian-splatting", "spz", "computer-graphics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
]

dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
scipy = ["scipy>=1.7.0"]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]

[project.urls]
Homepage = "https://github.com/OlegEvst/-PySpz"
Repository = "https://github.com/OlegEvst/-PySpz"
Issues = "https://github.com/OlegEvst/-PySpz/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyspz*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=pyspz --cov-report=term-missing --cov-report=html"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
